--- a/PCF-Controls/ReactQueryBuilder/ReactQueryBuilderControl/package.json
+++ b/PCF-Controls/ReactQueryBuilder/ReactQueryBuilderControl/package.json
@@ -21,17 +21,21 @@
     "sql-formatter": "^15.4.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.23.0",
     "@microsoft/eslint-plugin-power-apps": "^0.2.51",
     "@types/node": "^18.19.54",
     "@types/powerapps-component-framework": "^1.3.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.7.1",
-    "@typescript-eslint/parser": "^7.7.1",
+    "@typescript-eslint/eslint-plugin": "^8.28.0",
+    "@typescript-eslint/parser": "^8.28.0",
     "css-loader": "^7.1.2",
-    "eslint": "^8.57.0",
+    "eslint": "^9.23.0",
+    "eslint-plugin-promise": "^7.2.1",
+    "globals": "^16.0.0",
     "pcf-scripts": "^1",
     "pcf-start": "^1",
-    "typescript": "^4.9.5"
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.28.0"
   }
 }
