--- a/PCF-Controls/ReactQueryBuilder/ReactQueryBuilderControl/package.json
+++ b/PCF-Controls/ReactQueryBuilder/ReactQueryBuilderControl/package.json
@@ -13,17 +13,18 @@
     "refreshTypes": "pcf-scripts refreshTypes"
   },
   "dependencies": {
-    "@react-querybuilder/dnd": "^7.6.1",
+    "@react-querybuilder/dnd": "^8.4.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
+    "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.3.1",
-    "react-querybuilder": "^7.6.1",
+    "react-querybuilder": "^8.4.1",
     "sql-formatter": "^15.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
-    "@microsoft/eslint-plugin-power-apps": "^0.2.51",
-    "@types/node": "^18.19.54",
+    "@microsoft/eslint-plugin-power-apps": "^0.3.7",
+    "@types/node": "^22.13.14",
     "@types/powerapps-component-framework": "^1.3.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
