Update ReactQueryBuilder Control and Manifest Files
- Bump version of @types/powerapps-component-framework to ^1.3.18 in package.json
- Update pcf-scripts and pcf-start to ^1.51.1 in package.json
- Increment control version to 0.0.36 in ControlManifest.Input.xml
- Remove unused properties from ManifestTypes.d.ts
- Delete outdated zip files: ReactQueryBuilder_Managed.zip and ReactQueryBuilder_Unmanaged.zip
- Add new Solution.zip and Solution_managed.zip files
- Update Solution.xml version from 1.0.0.1 to 1.0.0.2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,13 +18,11 @@
   "editor.inlineSuggest.enabled": true,
   "editor.inlineSuggest.showToolbar": "always",
   "github.copilot.editor.iterativeFixing": true,
-  
   // Power Platform specific settings
   "typescript.preferences.noSemicolons": "off",
   "typescript.suggest.autoImports": true,
   "typescript.updateImportsOnFileMove.enabled": "always",
   "typescript.preferences.importModuleSpecifier": "relative",
-  
   // ESLint configuration for PCF controls
   "eslint.enable": true,
   "eslint.validate": [
@@ -35,11 +33,10 @@
   ],
   "eslint.workingDirectories": [
     "PCF-Controls/LookupToCombobox/LookupToComboboxControl",
-    "PCF-Controls/LookupToDropdown/LookupToDropdownControl", 
+    "PCF-Controls/LookupToDropdown/LookupToDropdownControl",
     "PCF-Controls/ReactQueryBuilder/ReactQueryBuilderControl",
     "PCF-Controls/Rrule/RruleControl"
   ],
-  
   // File associations for Power Platform
   "files.associations": {
     "*.pcfproj": "xml",
@@ -49,47 +46,44 @@
     "*.resx": "xml",
     "*.webresource": "xml"
   },
-  
   // Exclude patterns for better performance
   "files.exclude": {
     "**/node_modules": true,
-    "**/obj": true,
-    "**/bin": true,
+    // "**/obj": true,
+    // "**/bin": true,
     "**/.git": true,
     "**/.svn": true,
     "**/.hg": true,
     "**/CVS": true,
     "**/.DS_Store": true,
-    "**/generated": true,
-    "**/out": true
+    // "**/generated": true,
+    "**/out": true,
+    // Explicitly show the ReactQueryBuilder solution and control outputs
+    // "PCF-Controls/ReactQueryBuilder/ReactQueryBuilderSolution/bin": false,
+    // "PCF-Controls/ReactQueryBuilder/ReactQueryBuilderControl/out": false
   },
-  
   "search.exclude": {
     "**/node_modules": true,
-    "**/obj": true,
-    "**/bin": true,
+    //"**/obj": true,
+    // "**/bin": true,
     "**/generated": true,
-    "**/out": true,
-    "**/*.dll": true,
+    //"**/out": true,
+    // "**/*.dll": true,
     "**/*.pdb": true,
     "**/package-lock.json": true
   },
-  
   // Code formatting
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
   },
-  
   // IntelliSense and suggestions
   "typescript.inlayHints.parameterNames.enabled": "all",
   "typescript.inlayHints.variableTypes.enabled": true,
   "typescript.inlayHints.functionLikeReturnTypes.enabled": true,
-  
   // Terminal settings for Power Platform CLI
   "terminal.integrated.cwd": "${workspaceFolder}",
   "terminal.integrated.defaultProfile.windows": "PowerShell",
-  
   // Git settings
   "git.autofetch": true,
   "git.confirmSync": false,
